apollo-router/tests/snapshots/integration_tests__defer_default_variable-3.snap
---
source: apollo-router/tests/integration_tests.rs
assertion_line: 729
expression: first
---
{
  "data": {
    "me": {
      "id": "1",
      "name": "Ada Lovelace"
    }
  },
  "hasNext": true
}
