apollo-router/tests/snapshots/integration_tests__defer_default_variable.snap
---
source: apollo-router/tests/integration_tests.rs
assertion_line: 712
expression: first
---
{
  "errors": [
    {
      "message": "invalid type for variable: 'if'",
      "extensions": {
        "type": "ValidationInvalidTypeVariable",
        "name": "if"
      }
    }
  ]
}
