apollo-router/tests/snapshots/integration_tests__defer_empty_primary_response-2.snap
---
source: apollo-router/tests/integration_tests.rs
expression: stream.next().await.unwrap().unwrap()
---
{
  "hasNext": false,
  "incremental": [
    {
      "label": "name",
      "data": {
        "name": "Ada Lovelace"
      },
      "path": [
        "me"
      ]
    }
  ]
}
