apollo-router/tests/snapshots/integration_tests__defer_empty_primary_response.snap
---
source: apollo-router/tests/integration_tests.rs
expression: "std::str::from_utf8(first.to_vec().as_slice()).unwrap()"
---

--graphql
content-type: application/json

{"data":{},"hasNext":true}
--graphql

