apollo-router/tests/snapshots/integration_tests__defer_path-2.snap
---
source: apollo-router/tests/integration_tests.rs
assertion_line: 679
expression: second
---
{
  "hasNext": true,
  "incremental": [
    {
      "label": "name",
      "data": {
        "name": "Ada Lovelace"
      },
      "path": [
        "me"
      ]
    }
  ]
}
