apollo-router/tests/snapshots/integration_tests__defer_path.snap
---
source: apollo-router/tests/integration_tests.rs
expression: "std::str::from_utf8(first.to_vec().as_slice()).unwrap()"
---

--graphql
content-type: application/json

{"data":{"me":{"id":"1"}},"hasNext":true}
--graphql

