apollo-router/tests/snapshots/integration_tests__defer_path_in_array-2.snap
---
source: apollo-router/tests/integration_tests.rs
expression: second
---
{
  "hasNext": false,
  "incremental": [
    {
      "label": "author name",
      "data": {
        "name": "Ada Lovelace"
      },
      "path": [
        "me",
        "reviews",
        0,
        "author"
      ]
    },
    {
      "label": "author name",
      "data": {
        "name": "Ada Lovelace"
      },
      "path": [
        "me",
        "reviews",
        1,
        "author"
      ]
    }
  ]
}
