apollo-router/tests/snapshots/integration_tests__defer_path_with_disabled_config.snap
---
source: apollo-router/tests/integration_tests.rs
expression: stream.next().await.unwrap().unwrap()
---
{
  "errors": [
    {
      "message": "validation error: cannot find type `defer` in this document",
      "extensions": {
        "code": "VALIDATION_ERROR"
      }
    }
  ]
}
