apollo-router/tests/snapshots/integration_tests__defer_query_without_accept.snap
---
source: apollo-router/tests/integration_tests.rs
assertion_line: 644
expression: first
---
{
  "errors": [
    {
      "message": "the router received a query with the @defer directive but the client does not accept multipart/mixed HTTP responses. To enable @defer support, add the HTTP header Accept: multipart/mixed; deferSpec=20220824",
      "locations": [],
      "path": null
    }
  ]
}
