apollo-router/tests/snapshots/integration_tests__include_if_works.snap
---
source: apollo-router/tests/integration_tests.rs
expression: stream.next().await.unwrap().unwrap()
---
{
  "data": {}
}
